--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/UploadSwitchReleaseCauseEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/UploadSwitchReleaseCauseEditor.html
@@ -2,26 +2,27 @@
     <vr-modalbody>
         <vr-form name="formUploadSwitchReleaseCauseEditor">
             <vr-row removeline>
+                <vr-whs-be-switch-selector on-ready="scopeModel.onSwitchSelectorReady" normal-col-num="6" isrequired="true" hideremoveicon="true"></vr-whs-be-switch-selector>
                 <vr-columns width="1/2row">
                     <vr-label>Upload File</vr-label>
                     <vr-fileupload extension="xls,xlsx" value="file" isrequired> </vr-fileupload>
                 </vr-columns>
                 <vr-columns width="1/2row">
                     <vr-row removeline>
-                        <vr-columns width="fullrow" ng-show="isUploadingComplete">
-                            <vr-label>Number Of Switch Release Causes Added:</vr-label><vr-label isvalue>{{addedCountries}}</vr-label>
+                        <vr-columns width="fullrow" ng-show="scopeModel.isUploadingComplete">
+                            <vr-label>Number Of Switch Release Causes Added:</vr-label><vr-label isvalue>{{scopeModel.addedSwitchReleaseCauses}}</vr-label>
                         </vr-columns>
 
                     </vr-row>
                     <vr-row removeline>
-                        <vr-columns width="fullrow" ng-show="isUploadingComplete">
-                            <vr-label>Number Of Switch Release Causes Failed:</vr-label><vr-label isvalue>{{existsCountries}}</vr-label>
+                        <vr-columns width="fullrow" ng-show="scopeModel.isUploadingComplete">
+                            <vr-label>Number Of Switch Release Causes Failed:</vr-label><vr-label isvalue>{{scopeModel.existsSwitchReleaseCauses}}</vr-label>
                         </vr-columns>
                     </vr-row>
                     <vr-row removeline>
-                        <vr-columns width="fullrow" ng-show="isUploadingComplete">
+                        <vr-columns width="fullrow" ng-show="scopeModel.isUploadingComplete">
                             <vr-label>Download Result</vr-label>
-                            <vr-button type="Download" data-onclick="downloadLog" standalone></vr-button>
+                            <vr-button type="Download" data-onclick="scopeModel.downloadLog" standalone></vr-button>
                         </vr-columns>
                     </vr-row>
                 </vr-columns>
@@ -31,7 +32,7 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Upload" formname="formUploadSwitchReleaseCauseEditor" data-onclick="scopeModel.uploadSwitchReleaseCause"></vr-button>
+                <vr-button type="Upload" formname="formUploadSwitchReleaseCauseEditor" data-onclick="scopeModel.uploadSwitchReleaseCauses"></vr-button>
                 <vr-button type="Download"  data-onclick="scopeModel.downloadTemplate"></vr-button>
             </div>
         </vr-actionbar>
