--- a/Vanrise/Code/Vanrise.Invoice.BP/InvoiceGenerationProcess.xaml
+++ b/Vanrise/Code/Vanrise.Invoice.BP/InvoiceGenerationProcess.xaml
@@ -1,12 +1,18 @@
 ﻿<Activity mc:Ignorable="sap sap2010 sads" x:Class="Vanrise.Invoice.BP.InvoiceGenerationProcess"
  xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+ xmlns:mca="clr-namespace:Microsoft.CSharp.Activities;assembly=System.Activities"
+ xmlns:s="clr-namespace:System;assembly=mscorlib"
  xmlns:sads="http://schemas.microsoft.com/netfx/2010/xaml/activities/debugger"
  xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation"
  xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation"
  xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib"
  xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib"
+ xmlns:vbw="clr-namespace:Vanrise.BusinessProcess.WFActivities;assembly=Vanrise.BusinessProcess.WFActivities"
+ xmlns:ve="clr-namespace:Vanrise.Entities;assembly=Vanrise.Entities"
  xmlns:viba="clr-namespace:Vanrise.Invoice.BP.Arguments;assembly=Vanrise.Invoice.BP.Arguments"
+ xmlns:viba1="clr-namespace:Vanrise.Invoice.BP.Activities;assembly=Vanrise.Invoice.BP.Activities"
+ xmlns:vie="clr-namespace:Vanrise.Invoice.Entities;assembly=Vanrise.Invoice.Entities"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="Input" Type="InArgument(viba:InvoiceGenerationProcessInput)" />
@@ -25,26 +31,97 @@
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
     <sco:Collection x:TypeArguments="AssemblyReference">
-      <AssemblyReference>mscorlib</AssemblyReference>
+      <AssemblyReference>Microsoft.CSharp</AssemblyReference>
       <AssemblyReference>System</AssemblyReference>
+      <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>System.Core</AssemblyReference>
       <AssemblyReference>System.Data</AssemblyReference>
+      <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
       <AssemblyReference>System.ServiceModel</AssemblyReference>
+      <AssemblyReference>System.ServiceModel.Activities</AssemblyReference>
+      <AssemblyReference>System.Xaml</AssemblyReference>
       <AssemblyReference>System.Xml</AssemblyReference>
+      <AssemblyReference>System.Xml.Linq</AssemblyReference>
+      <AssemblyReference>Vanrise.BusinessProcess</AssemblyReference>
+      <AssemblyReference>Vanrise.BusinessProcess.Entities</AssemblyReference>
+      <AssemblyReference>Vanrise.BusinessProcess.WFActivities</AssemblyReference>
+      <AssemblyReference>Vanrise.Invoice.BP.Activities</AssemblyReference>
       <AssemblyReference>Vanrise.Invoice.BP.Arguments</AssemblyReference>
+      <AssemblyReference>Vanrise.Entities</AssemblyReference>
+      <AssemblyReference>Vanrise.Invoice.Entities</AssemblyReference>
+      <AssemblyReference>mscorlib</AssemblyReference>
+      <AssemblyReference>Vanrise.Invoice.BP</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Root" sap2010:WorkflowViewState.IdRef="Sequence_1" sads:DebugSymbol.Symbol="d0RDOlxURlNcVmFucmlzZVxDb2RlXFZhbnJpc2UuSW52b2ljZS5CUFxJbnZvaWNlR2VuZXJhdGlvblByb2Nlc3MueGFtbAElAyWCAQIBAQ==" />
+  <Sequence DisplayName="Root" sap2010:WorkflowViewState.IdRef="Sequence_1">
+    <Sequence.Variables>
+      <Variable x:TypeArguments="scg:List(vie:InvoiceGenerationDraft)" Name="InvoiceGenerationDrafts" />
+    </Sequence.Variables>
+    <vbw:WriteTrackingMessage sap2010:WorkflowViewState.IdRef="WriteTrackingMessage_1" Message="Starting Invoice Generation Process.">
+      <vbw:WriteTrackingMessage.Severity>
+        <InArgument x:TypeArguments="s:Nullable(ve:LogEntryType)">
+          <mca:CSharpValue x:TypeArguments="s:Nullable(ve:LogEntryType)">Vanrise.Entities.LogEntryType.Information</mca:CSharpValue>
+        </InArgument>
+      </vbw:WriteTrackingMessage.Severity>
+    </vbw:WriteTrackingMessage>
+    <viba1:LoadInvoiceGenerationDrafts sap2010:WorkflowViewState.IdRef="LoadInvoiceGenerationDrafts_1">
+      <viba1:LoadInvoiceGenerationDrafts.InvoiceGenerationDraftList>
+        <OutArgument x:TypeArguments="scg:List(vie:InvoiceGenerationDraft)">
+          <mca:CSharpReference x:TypeArguments="scg:List(vie:InvoiceGenerationDraft)">InvoiceGenerationDrafts</mca:CSharpReference>
+        </OutArgument>
+      </viba1:LoadInvoiceGenerationDrafts.InvoiceGenerationDraftList>
+      <viba1:LoadInvoiceGenerationDrafts.InvoiceGenerationIdentifier>
+        <InArgument x:TypeArguments="s:Guid">
+          <mca:CSharpValue x:TypeArguments="s:Guid">Input.InvoiceGenerationIdentifier</mca:CSharpValue>
+        </InArgument>
+      </viba1:LoadInvoiceGenerationDrafts.InvoiceGenerationIdentifier>
+    </viba1:LoadInvoiceGenerationDrafts>
+    <If sap2010:WorkflowViewState.IdRef="If_1">
+      <If.Condition>
+        <InArgument x:TypeArguments="x:Boolean">
+          <mca:CSharpValue x:TypeArguments="x:Boolean">InvoiceGenerationDrafts != null &amp;&amp; InvoiceGenerationDrafts.Count &gt; 0</mca:CSharpValue>
+        </InArgument>
+      </If.Condition>
+      <If.Then>
+        <ForEach x:TypeArguments="vie:InvoiceGenerationDraft" DisplayName="ForEach&lt;InvoiceGenerationDraft&gt;">
+          <ForEach.Values>
+            <InArgument x:TypeArguments="scg:IEnumerable(vie:InvoiceGenerationDraft)">
+              <mca:CSharpValue x:TypeArguments="scg:IEnumerable(vie:InvoiceGenerationDraft)">InvoiceGenerationDrafts</mca:CSharpValue>
+            </InArgument>
+          </ForEach.Values>
+          <ActivityAction x:TypeArguments="vie:InvoiceGenerationDraft">
+            <ActivityAction.Argument>
+              <DelegateInArgument x:TypeArguments="vie:InvoiceGenerationDraft" Name="invoiceGenerationDraft" />
+            </ActivityAction.Argument>
+          </ActivityAction>
+          <sap2010:WorkflowViewState.IdRef>ForEach`1_1</sap2010:WorkflowViewState.IdRef>
+        </ForEach>
+      </If.Then>
+    </If>
+    <vbw:WriteTrackingMessage sap2010:WorkflowViewState.IdRef="WriteTrackingMessage_2" Message="Finished Invoice Generation Process.">
+      <vbw:WriteTrackingMessage.Severity>
+        <InArgument x:TypeArguments="s:Nullable(ve:LogEntryType)">
+          <mca:CSharpValue x:TypeArguments="s:Nullable(ve:LogEntryType)">Vanrise.Entities.LogEntryType.Information</mca:CSharpValue>
+        </InArgument>
+      </vbw:WriteTrackingMessage.Severity>
+    </vbw:WriteTrackingMessage>
+    <sads:DebugSymbol.Symbol>d0RDOlxURlNcVmFucmlzZVxDb2RlXFZhbnJpc2UuSW52b2ljZS5CUFxJbnZvaWNlR2VuZXJhdGlvblByb2Nlc3MueGFtbA44A20OAgEBPAVCIAIBFkMFTikCAQ9PBWQKAgEHZQVrIAIBAj8LP4UBAgEYPGA8hgECARdLC0toAgETRgtGhAECARBSC1KZAQIBCFYJYhMCAQtoC2iFAQIBBGVgZYYBAgEDWQ9ZhwECAQw=</sads:DebugSymbol.Symbol>
+  </Sequence>
   <sap2010:WorkflowViewState.ViewStateManager>
     <sap2010:ViewStateManager>
-      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="200,99">
+      <sap2010:ViewStateData Id="WriteTrackingMessage_1" sap:VirtualizedContainerService.HintSize="464,22" />
+      <sap2010:ViewStateData Id="LoadInvoiceGenerationDrafts_1" sap:VirtualizedContainerService.HintSize="464,22" />
+      <sap2010:ViewStateData Id="ForEach`1_1" sap:VirtualizedContainerService.HintSize="287,210" />
+      <sap2010:ViewStateData Id="If_1" sap:VirtualizedContainerService.HintSize="464,360" />
+      <sap2010:ViewStateData Id="WriteTrackingMessage_2" sap:VirtualizedContainerService.HintSize="464,22" />
+      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="486,670">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
-      <sap2010:ViewStateData Id="Vanrise.Invoice.BP.InvoiceGenerationProcess_1" sap:VirtualizedContainerService.HintSize="240,179" />
+      <sap2010:ViewStateData Id="Vanrise.Invoice.BP.InvoiceGenerationProcess_1" sap:VirtualizedContainerService.HintSize="526,750" />
     </sap2010:ViewStateManager>
   </sap2010:WorkflowViewState.ViewStateManager>
 </Activity>
