--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Invoice/Templates/InvoiceGenerationDraftGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Invoice/Templates/InvoiceGenerationDraftGridTemplate.html
@@ -5,19 +5,27 @@
                      on-ready="onGridReady"
                      dataretrievalfunction="dataRetrievalFunction"
                      pagingtype="'Pager'"
-                     idfield="InvoiceGenerationDraftId">
-            <vr-datagridcolumn headertext="'ID'" type="'Text'" field="'InvoiceGenerationDraftId'"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'PartnerName'"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'From'" type="'Date'">
-                <vr-datetimepicker value="dataItem.From" type="date" isrequired="true"></vr-datetimepicker>
-            </vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'To'" type="'Date'">
-                <vr-datetimepicker value="dataItem.To" type="date" isrequired="true"></vr-datetimepicker>
+                     idfield="InvoiceGenerationDraftId" defaultsortbyfieldname="'InvoiceGenerationDraftId'">
+            <vr-datagridcolumn headertext="'ID'" type="'Text'" field="'InvoiceGenerationDraftId'" disablesorting="true"></vr-datagridcolumn>
+            <vr-datagridcolumn fixedwidth="20" disablesorting="true">
+                <vr-check value="dataItem.IsSelected" onvaluechanged="dataItem.onItemChanged"></vr-check>
             </vr-datagridcolumn>
 
-            <vr-datagridcolumn headertext="'Settings'">
+            <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'PartnerName'" disablesorting="true" widthfactor="'1'"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'From'" type="'Date'" disablesorting="true" fixedwidth="100">
+                <vr-columns width="fullrow" haschildcolumns withemptyline>
+                    <vr-datetimepicker value="dataItem.From" type="date" isrequired="true" onvaluechanged="dataItem.onItemChanged"></vr-datetimepicker>
+                </vr-columns>
+            </vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'To'" type="'Date'" disablesorting="true" fixedwidth="100">
+                <vr-columns width="fullrow" haschildcolumns withemptyline>
+                    <vr-datetimepicker value="dataItem.To" type="date" isrequired="true" onvaluechanged="dataItem.onItemChanged"></vr-datetimepicker>
+                </vr-columns>
+            </vr-datagridcolumn>
+
+            <vr-datagridcolumn headertext="'Settings'" disablesorting="true" widthfactor="'3'">
                 <span ng-if="viewScope.generationCustomSectionDirective!=undefined">
-                    <vr-directivewrapper directive="viewScope.generationCustomSectionDirective" on-ready="dataItem.onGenerationCustomSectionDirectiveReady" normal-col-num="12"></vr-directivewrapper>
+                    <vr-directivewrapper directive="viewScope.generationCustomSectionDirective" on-ready="dataItem.onGenerationCustomSectionDirectiveReady" normal-col-num="4"></vr-directivewrapper>
                 </span>
             </vr-datagridcolumn>
         </vr-datagrid>
