--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/Extensions/GenerationCustomSection/Templates/CustomerGenerationCustomSectionTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/Extensions/GenerationCustomSection/Templates/CustomerGenerationCustomSectionTemplate.html
@@ -1,6 +1,6 @@
 ﻿<vr-common-timezone-selector on-ready="scopeModel.onTimeZoneSelectorReady" normal-col-num="{{ctrlCustomerGeneration.normalColNum}}" selectedvalues="scopeModel.selectedTimeZone" onselectionchanged="    scopeModel.onTimeZoneSelectionChanged"></vr-common-timezone-selector>
 <vr-columns colnum="{{ctrlCustomerGeneration.normalColNum}}">
-    <vr-textbox type="number" label="Commission" value="scopeModel.commission" minvalue="-100" maxvalue="100"></vr-textbox>
+    <vr-textbox type="number" label="Commission" value="scopeModel.commission" minvalue="-100" maxvalue="100" onblurtextbox="scopeModel.onCommissionFocusChanged"></vr-textbox>
 </vr-columns>
 <vr-columns colnum="{{ctrlCustomerGeneration.normalColNum}}">
     <vr-select datasource="scopeModel.commissionTypes"
@@ -9,7 +9,7 @@
                selectedvalues="scopeModel.selectedCommissionType"
                entityname="Commission Type"
                label="Commission Type"
-               hideremoveicon>
+               hideremoveicon onselectionchanged="scopeModel.onCommissionTypeSelectionChanged">
     </vr-select>
 </vr-columns>
 
