--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/SwitchReleaseCauseManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/SwitchReleaseCauseManagement.html
@@ -1,20 +1,20 @@
 ﻿<vr-panel ng-controller="WhS_BE_SwitchReleaseCauseManagementController">
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed">
-            <vr-row>
-                <vr-columns colnum="3">
-                    <vr-textbox value="scopeModel.releaseCode" label="Release Code" ></vr-textbox>
+            <vr-row removeline>
+                <vr-columns width="normal">
+                    <vr-textbox value="scopeModel.releaseCode" label="Release Code"></vr-textbox>
                 </vr-columns>
-                <vr-whs-be-switch-selector on-ready="scopeModel.onSwitchSelectorReady" normal-col-num="3" ismultipleselection="true" hideremoveicon="true"></vr-whs-be-switch-selector>
-                <vr-columns colnum="3">
+                <vr-whs-be-switch-selector on-ready="scopeModel.onSwitchSelectorReady" normal-col-num="2" ismultipleselection="true" hideremoveicon="true"></vr-whs-be-switch-selector>
+                <vr-columns width="normal">
                     <vr-textbox value="scopeModel.description" label="Description"></vr-textbox>
                 </vr-columns>
-                <vr-columns colnum="3">
+                <vr-columns width="normal">
                     <vr-select datasource="scopeModel.deliveryStatus" datatextfield="description" datavaluefield="value" label="Delivered" selectedvalues="scopeModel.selectedDeliveryStatus"></vr-select>
                 </vr-columns>
-           </vr-row>
+            </vr-row>
         </div>
-        <vr-row>
+        <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="scopeModel.searchClicked"></vr-button>
