--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/UploadSwitchReleaseCauseEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SwitchReleaseCause/UploadSwitchReleaseCauseEditor.html
@@ -2,12 +2,12 @@
     <vr-modalbody>
         <vr-form name="formUploadSwitchReleaseCauseEditor">
             <vr-row removeline>
-                <vr-whs-be-switch-selector on-ready="scopeModel.onSwitchSelectorReady" normal-col-num="6" isrequired="true" hideremoveicon="true"></vr-whs-be-switch-selector>
-                <vr-columns width="1/2row">
+                <vr-whs-be-switch-selector on-ready="scopeModel.onSwitchSelectorReady" normal-col-num="4" isrequired="true" hideremoveicon="true"></vr-whs-be-switch-selector>
+                <vr-columns width="1/3row">
                     <vr-label>Upload File</vr-label>
                     <vr-fileupload extension="xls,xlsx" value="file" isrequired> </vr-fileupload>
                 </vr-columns>
-                <vr-columns width="1/2row">
+                <vr-columns width="fullrow">
                     <vr-row removeline>
                         <vr-columns width="fullrow" ng-show="scopeModel.isUploadingComplete">
                             <vr-label>Number Of Switch Release Causes Added:</vr-label><vr-label isvalue>{{scopeModel.addedSwitchReleaseCauses}}</vr-label>
