fix ProfitByCarrier Bugs
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43872

--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Reports/Analytics/rdlProfitByCarrier.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Reports/Analytics/rdlProfitByCarrier.rdlc
@@ -603,6 +603,10 @@
                   <Name>PointWidth</Name>
                   <Value>0.6</Value>
                 </CustomProperty>
+                <CustomProperty>
+                  <Name>LabelStyle</Name>
+                  <Value>TopLeft</Value>
+                </CustomProperty>
               </CustomProperties>
               <ValueAxisName>Primary</ValueAxisName>
               <CategoryAxisName>Primary</CategoryAxisName>
