NewRouteSyncDefinition inline add button implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43893

--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/ProcessInput/Normal/Templates/RouteSyncProcessManualTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/ProcessInput/Normal/Templates/RouteSyncProcessManualTemplate.html
@@ -4,6 +4,7 @@
                                                     selectedvalues="selectedRouteSyncDefintion"
                                                     isrequired="true"
                                                     label="Route Sync Definition"
+                                                    showaddbutton
                                                     hideremoveicon>
         </whs-routesync-routesyncdefinition-selector>
     </vr-columns>
