--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/SalePriceListRateChangeTemplate.html
@@ -4,6 +4,7 @@
              pagingtype="'PagingOnScroll'"
              idfield="ZoneId">
     <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Current Rate'" field="'RecentRate'" type="'Number'" numberprecision="'LongPrecision'" fixedwidth="'70'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Rate'" field="'Rate'" type="'Number'" numberprecision="'LongPrecision'" fixedwidth="'70'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbol'" type="'Text'" fixedwidth="'70'"></vr-datagridcolumn>
     <vr-datagridcolumn fixedwidth="'30'" headertext="'Change Type'" invisibleheader>
