--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Preview/Templates/RatePreviewGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Preview/Templates/RatePreviewGridTemplate.html
@@ -10,7 +10,7 @@
         <vr-label isvalue="true" ng-if="dataItem.Entity.IsCurrentRateInherited">(Inherited)</vr-label>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'New Rate'" field="'Entity.NewRate'" type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Change Type'" fixedwidth="'100'">
+    <vr-datagridcolumn headertext="'Change Type'" fixedwidth="'100'" field="'Entity.ChangeType'">
         <vr-icon icontype="dataItem.RateChangeTypeIconType" iconurl="dataItem.RateChangeTypeIconUrl" tooltip="dataItem.RateChangeTypeIconTooltip"></vr-icon>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.EffectiveOn'" type="'Date'" fixedwidth="'100'"></vr-datagridcolumn>
