Add description to sale pricelist
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43900

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
@@ -16,4 +16,5 @@
     <vr-datagridcolumn headertext="'Sent'" field="'Entity.IsSent'" disablesorting="true">
         <vr-icon icontype="dataItem.Entity.IsSent"></vr-icon>
     </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'" type="'Text'"></vr-datagridcolumn>
 </vr-datagrid>
