--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SendSalePricelistConfirmation.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SendSalePricelistConfirmation.html
@@ -1,8 +1,10 @@
-﻿<div vr-modalcontent ng-controller="WhS_BE_SendSalePricelistConfirmationController" vr-loader="scopeModel.isLoading" width="40%" >
+﻿<div vr-modalcontent ng-controller="WhS_BE_SendSalePricelistConfirmationController" vr-loader="scopeModel.isLoading" width="40%">
     <vr-modalbody>
         <vr-form name="formSendSalePricelistConfirmation">
             <vr-row>
-                <vr-label largesize>Below customers have previous pricelists not sent, are you sure you want to continue?</vr-label>
+                <vr-columns width="fullrow">
+                    <vr-label largesize breakline>Below customers have previous pricelists not sent, are you sure you want to continue?</vr-label>
+                </vr-columns>
             </vr-row>
             <vr-row>
                 <vr-columns width="fullrow">
