Implementing export handler for dids and business trunks
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43918

--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/TelesEnterprises/Templates/TelesBusinessTrunksGridTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/TelesEnterprises/Templates/TelesBusinessTrunksGridTemplate.html
@@ -1,6 +1,6 @@
 ﻿<vr-datagrid datasource="scopeModel.businessTrunks"
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
-             on-ready="scopeModel.onGridReady">
+             on-ready="scopeModel.onGridReady" enableautoexport="true">
     <vr-datagridcolumn headertext="'Start Screen Number'" field="'StartSn'"></vr-datagridcolumn>
 </vr-datagrid>
