--- a/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/TelesEnterprises/Templates/TelesDIDsGridTemplate.html
+++ b/Retail/Code/Retail.Teles.Web/Retail_Teles/Directives/TelesEnterprises/Templates/TelesDIDsGridTemplate.html
@@ -1,6 +1,6 @@
 ﻿<vr-datagrid datasource="scopeModel.dids"
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
-             on-ready="scopeModel.onGridReady">
+             on-ready="scopeModel.onGridReady" enableautoexport="true">
     <vr-datagridcolumn headertext="'Screen Number'" field="'ScreenNumber'"></vr-datagridcolumn>
 </vr-datagrid>
