--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/Adapter/Templates/AdapterSFTPTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/Adapter/Templates/AdapterSFTPTemplate.html
@@ -1,42 +1,52 @@
-﻿<vr-row>
-    <vr-columns width="1/3row">
-        <vr-textbox value="serverIP" label="Server IPs" isrequired />
-    </vr-columns>
-    <vr-columns width="1/3row">
-        <vr-textbox value="userName" label="Username" isrequired />
-    </vr-columns>
-    <vr-columns width="1/3row">
-        <vr-textbox value="password" label="Password" type="password" isrequired />
-    </vr-columns>
-</vr-row>
-<vr-row>
-    <vr-columns width="1/3row">
-        <vr-textbox value="extension" label="Extension" isrequired />
-    </vr-columns>
-    <vr-columns width="1/3row">
-        <vr-textbox value="mask" label="Mask" />
-    </vr-columns>
-    <vr-columns width="1/3row">
-        <vr-textbox value="directory" label="Directory Path" isrequired />
-    </vr-columns>
-</vr-row>
-<vr-row>
-    <vr-columns width="1/3row">
-        <vr-switch label="Based On Modified Time" value="basedOnTime"></vr-switch>
-    </vr-columns>
-    <vr-columns width="1/3row">
-        <vr-textbox value="lastImportedFile" label="Last Imported File" />
-    </vr-columns>
-    <vr-columns width="1/3row">
-        <vr-switch label="Compressed" value="compressed"></vr-switch>
-    </vr-columns>
-    <vr-columns width="1/3row" ng-show="compressed">
-        <vr-select datasource="compressionTypes" datatextfield="description" datavaluefield="value" label="Compression Type" selectedvalues="selectedCompressionType" isrequired="compressed"></vr-select>
-    </vr-columns>
-    <vr-columns width="1/3row">
-        <vr-select datasource="actionsAfterImport" datatextfield="name" datavaluefield="value" label="Action After Import" selectedvalues="selectedAction" isrequired="actionIsRequired()"></vr-select>
-    </vr-columns>
-    <vr-columns width="1/3row">
-        <vr-textbox ng-show="selectedAction.value == 2" value="directorytoMoveFile" label="Directory to Move File" />
-    </vr-columns>
-</vr-row>
+﻿<vr-section header="SFTP Server Info">
+    <vr-row>
+        <vr-columns width="1/3row">
+            <vr-textbox value="serverIP" label="Server IPs" isrequired />
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox value="userName" label="Username" isrequired />
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox value="password" label="Password" type="password" isrequired />
+        </vr-columns>
+    </vr-row>
+    <vr-row>
+        <vr-columns width="1/3row">
+            <vr-textbox value="extension" label="Extension" isrequired />
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox value="mask" label="Mask" />
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox value="directory" label="Directory Path" isrequired />
+        </vr-columns>
+    </vr-row>
+</vr-section>
+<vr-section header="Settings">
+    <vr-row>
+        <vr-columns width="1/3row">
+            <vr-switch label="Based On Modified Time" value="basedOnTime"></vr-switch>
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox value="maxNumberOfFiles" label="Max Number Of Files" type="number" min="1" />
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox value="fileCompletenessCheckInterval" label="File Completeness Check Interval (s)" type="number" minvalue="2" maxvalue="300" decimalprecision="0" />
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox value="lastImportedFile" label="Last Imported File" />
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-switch label="Compressed" value="compressed"></vr-switch>
+        </vr-columns>
+        <vr-columns width="1/3row" ng-show="compressed">
+            <vr-select datasource="compressionTypes" datatextfield="description" datavaluefield="value" label="Compression Type" selectedvalues="selectedCompressionType" isrequired="compressed"></vr-select>
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-select datasource="actionsAfterImport" datatextfield="name" datavaluefield="value" label="Action After Import" selectedvalues="selectedAction" isrequired="actionIsRequired()"></vr-select>
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox ng-show="selectedAction.value == 2" value="directorytoMoveFile" label="Directory to Move File" />
+        </vr-columns>
+    </vr-row>
+</vr-section>
