--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/MainExtensions/SupplierPriceListTemplate/SupplierPriceListConfiguration/Templates/BasicSupplierPriceListConfiguration.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/MainExtensions/SupplierPriceListTemplate/SupplierPriceListConfiguration/Templates/BasicSupplierPriceListConfiguration.html
@@ -70,4 +70,11 @@
     </vr-columns>
 </vr-row>
 
-
+<vr-row>
+    <vr-columns width="1/4row">
+        <vr-textbox label="Precision" value="scopeModel.precisionValue" type="number" customvalidate="scopeModel.precisionValidate()"></vr-textbox>
+    </vr-columns>
+    <vr-columns width="1/4row">
+        <vr-switch label="Crop" value="scopeModel.isCrop"></vr-switch>
+    </vr-columns>
+</vr-row>
