--- a/Vanrise/Code/Vanrise.ExcelConversion.Web/ExcelConversion/Directives/MainExtensions/FieldMapping/Templates/ConditionalCellFieldMappingTemplate.html
+++ b/Vanrise/Code/Vanrise.ExcelConversion.Web/ExcelConversion/Directives/MainExtensions/FieldMapping/Templates/ConditionalCellFieldMappingTemplate.html
@@ -5,7 +5,7 @@
                    datatextfield="FieldName"
                    datavaluefield="FieldName"
                    selectedvalues="ConditionalCellMappingCtrl.selectedvalues"
-                   label="Filter Field Mappings">
+                   label="Rows Fields">
         </vr-select>
     </vr-columns>
     <vr-columns width="1/3row" withemptyline>
@@ -17,14 +17,14 @@
         <vr-datagrid on-ready="onGridReady"
                      datasource="ConditionalCellMappingCtrl.datasourcemapping"
                      maxheight="250px" ondeleterow="ConditionalCellMappingCtrl.removeField">
-            <vr-datagridcolumn headertext="'Field Value'" field="'FieldTitle'" widthfactor="10">
+            <vr-datagridcolumn headertext="'Row Field Value'" field="'FieldTitle'" widthfactor="10">
                 <vr-row>
                     <vr-columns width="fullrow">
                         <vr-textbox value="dataItem.RowFieldValue"></vr-textbox>
                     </vr-columns>
                 </vr-row>
             </vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Field Mapping Choices'" widthfactor="15">
+            <vr-datagridcolumn headertext="'Field Mapping'" widthfactor="15">
                 <vr-excelconversion-fieldmapping-selective hidelabel="true" on-ready="dataItem.onFieldMappingReady" normal-col-num="{{dataItem.normalColNum}}" isrequired="true" customvalidate="dataItem.validate()" type="dataItem.type"> </vr-excelconversion-fieldmapping-selective>
             </vr-datagridcolumn>
         </vr-datagrid>
