Enhanecment on import  supplier pricelist
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43962

--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Views/SupplierPriceList.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Views/SupplierPriceList.html
@@ -49,7 +49,7 @@
                     <div transclude-to="buttons">
                         <vr-button type="Save" formname="formFilter" ng-show="scopeModel.selectedSupplier != undefined" validationcontext="scopeModel.configurationValidation" data-onclick="scopeModel.saveSupplierPriceListConfiguration" haspermission="scopeModel.hassaveSupplierPriceListConfigurationPermission"></vr-button>
                         <vr-button type="Upload" validationcontext="inPutExcelGroupValid" data-onclick="scopeModel.startImport"></vr-button>
-                        <vr-button type="TestConversion" validationcontext="inPutExcelGroupValid" data-onclick="scopeModel.testConversion"></vr-button>
+                        <vr-button type="TestConversion" ng-if="true" validationcontext="inPutExcelGroupValid" data-onclick="scopeModel.testConversion"></vr-button>
                         <vr-button type="Reset"  data-onclick="scopeModel.reset"></vr-button>
                     </div>
                 </vr-actionbar>
