--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/MainExtensions/SupplierPriceListTemplate/SupplierPriceListConfiguration/Templates/BasicSupplierPriceListConfiguration.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/WhS_SupplierPriceList/Directives/MainExtensions/SupplierPriceListTemplate/SupplierPriceListConfiguration/Templates/BasicSupplierPriceListConfiguration.html
@@ -45,36 +45,38 @@
 </vr-tabs>
 <vr-row>
     <vr-timeformat label="Date Time Format" value="scopeModel.dateTimeFormat" normal-col-num="6" isrequired="scopeModel.checkUsesOfEffectiveDate()"></vr-timeformat>
-</vr-row>
-<vr-row>
-    <vr-columns width="1/2row">
-        <vr-select datatextfield="description" datavaluefield="value" label="Code Layout"
-                   selectedvalues="scopeModel.selectedCodeLayout" datasource="scopeModel.codeLayouts" isrequired="true" onselectionchanged="scopeModel.onCodeLayoutSelectionChanged"></vr-select>
-    </vr-columns>
-    <vr-columns width="1/2row" ng-if="scopeModel.selectedCodeLayout!=undefined && scopeModel.showDelimiter">
-        <vr-textbox label="Delimiter" value="scopeModel.delimiterValue" isrequired="true" customvalidate="scopeModel.validate()"></vr-textbox>
-    </vr-columns>
-</vr-row>
-<vr-row>
-    <vr-columns width="1/2row" ng-if="scopeModel.showDelimiter">
-        <vr-switch label="Has Code Range" value="scopeModel.hasCodeRange" onvaluechanged="scopeModel.onCodeRangeValueChanged"></vr-switch>
-    </vr-columns>
-    <vr-columns width="1/2row" ng-if="scopeModel.hasCodeRange">
-        <vr-textbox label="Range Separator" value="scopeModel.rangeSeparator" isrequired="true" customvalidate="scopeModel.validate()"></vr-textbox>
-    </vr-columns>
 
 </vr-row>
-<vr-row>
-    <vr-columns width="1/2row">
-        <vr-switch label="Comma Decimal Separator" value="scopeModel.isCommaDecimalSeparator"></vr-switch>
-    </vr-columns>
-</vr-row>
+<vr-section title="Code Settings">
+    <vr-row>
+        <vr-columns width="1/4row">
+            <vr-select datatextfield="description" datavaluefield="value" label="Code Layout"
+                       selectedvalues="scopeModel.selectedCodeLayout" datasource="scopeModel.codeLayouts" isrequired="true" onselectionchanged="scopeModel.onCodeLayoutSelectionChanged"></vr-select>
+        </vr-columns>
+        <vr-columns width="1/4row" ng-if="scopeModel.selectedCodeLayout!=undefined && scopeModel.showDelimiter">
+            <vr-textbox label="Delimiter" value="scopeModel.delimiterValue" isrequired="true" customvalidate="scopeModel.validate()"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/4row" ng-if="scopeModel.showDelimiter">
+            <vr-switch label="Has Code Range" value="scopeModel.hasCodeRange" onvaluechanged="scopeModel.onCodeRangeValueChanged"></vr-switch>
+        </vr-columns>
+        <vr-columns width="1/4row" ng-if="scopeModel.hasCodeRange">
+            <vr-textbox label="Range Separator" value="scopeModel.rangeSeparator" isrequired="true" customvalidate="scopeModel.validate()"></vr-textbox>
+        </vr-columns>
+    </vr-row>
+</vr-section>
+<vr-section title="Rate Settings">
+    <vr-row>
+        <vr-columns width="1/4row">
+            <vr-textbox label="Rate Precision" value="scopeModel.precisionValue" type="number" customvalidate="scopeModel.precisionValidate()"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/4row">
+            <vr-select datatextfield="description" datavaluefield="value" datasource="scopeModel.ratePrecisionTypes" label="Rate Precision Type" vr-disabled="scopeModel.precisionValue==undefined"
+                       isrequired="scopeModel.precisionValue!=undefined" selectedvalues="scopeModel.ratePrecicionType" hideremoveicon>
+            </vr-select>
+        </vr-columns>
+        <vr-columns width="1/4row">
+            <vr-switch label="Comma Decimal Separator" value="scopeModel.isCommaDecimalSeparator"></vr-switch>
+        </vr-columns>
 
-<vr-row>
-    <vr-columns width="1/4row">
-        <vr-textbox label="Precision" value="scopeModel.precisionValue" type="number" customvalidate="scopeModel.precisionValidate()"></vr-textbox>
-    </vr-columns>
-    <vr-columns width="1/4row">
-        <vr-switch label="Crop" value="scopeModel.isCrop"></vr-switch>
-    </vr-columns>
-</vr-row>
+    </vr-row>
+</vr-section>
