implementing currency in rate preview in rate plan preview
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43983

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Preview/Templates/RatePreviewGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Preview/Templates/RatePreviewGridTemplate.html
@@ -10,6 +10,7 @@
         <vr-label isvalue="true" ng-if="dataItem.Entity.IsCurrentRateInherited">(Inherited)</vr-label>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'New Rate'" field="'Entity.NewRate'" type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbol'" type="'Text'" fixedwidth="'80'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Change Type'" fixedwidth="'100'" field="'Entity.ChangeType'">
         <vr-icon icontype="dataItem.RateChangeTypeIconType" iconurl="dataItem.RateChangeTypeIconUrl" tooltip="dataItem.RateChangeTypeIconTooltip"></vr-icon>
     </vr-datagridcolumn>
