--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
@@ -4,7 +4,7 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              idfield="Entity.PriceListId" enableautoexport="true" defaultsortbyfieldname="ctrl.defaultSortByFieldName" defaultsortdirection="ctrl.defaultSortDirection">
-    <vr-datagridcolumn widthfactor="5" disablesorting="true" ng-show="!hideSelectedColumn">
+    <vr-datagridcolumn widthfactor="5" invisibleheader headertext="'Is Sent'" disablesorting="true" ng-show="!hideSelectedColumn" fixedwidth="'30'">
         <vr-check value="dataItem.isSelected" ng-if="!dataItem.Entity.IsSent"></vr-check>
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'ID'" field="'Entity.PriceListId'" type="'Text'" fixedwidth="'50'"></vr-datagridcolumn>
