EnableAll/DisableAll implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44000

--- a/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/SchedulerTaskManagement.html
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/SchedulerTaskManagement.html
@@ -11,6 +11,8 @@
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
+                    <vr-button type="Disable All" ng-if="showDisableAll" data-onclick="DisableAllTasks" haspermission="hasConfigureAllTaskPermission"></vr-button>
+                    <vr-button type="Enable All" ng-if="showEnableAll" data-onclick="EnableAllTasks" haspermission="hasConfigureAllTaskPermission"></vr-button>
                     <vr-button type="Search" formname="formFilter" data-onclick="searchClicked" isasynchronous=" true"></vr-button>
                     <vr-button type="Add" data-onclick="AddNewTask" haspermission="hasAddSchedulerTaskPermission"></vr-button>
                 </div>
